--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.6",
     "@next/font": "13.1.1",
+    "alchemy-sdk": "^2.2.5",
+    "axios": "^1.2.2",
     "canvas": "^2.11.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "ipfs-core": "^0.17.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "uint8arrays": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
